- Support for private RO server (which has only one real IP).
  To use this feature you must put the line 'private 1' in tables/servers.txt.
- config.txt now supports multi-line comments, like C/C++.
  /* indicates the beginning of a comment, and */ indicates the end.
- AI sequence will now be cleared when switching characters due to
  autoConfChange.
- beepOnChat also affects emotions.

New config options:
- beepOnPM, beepOnChat if set to 1 will print a beep character when you
  hear a PM/public chat message.

Internal:
- $interface->beep() function for cross-platform beep support.


==================
### 1.5.0 (beta)
==================

A new beta version, 1.5.0, has finally been released. A lot of stuff
has changed, and your old configuration files may not work, so please
read this document thoroughly. But the easiest way is to delete your
configuration files and start from scratch using the new default
configuration files.
Remember: this is a BETA version. It may not be stable.

Special thanks to the following people; OpenKore would not have been
possible without them:
- Joseph: -1 and 2 attack-auto support in mon_control.txt,
  avoidList_inLockOnly, auto cart get, misc other things
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters,
  shop timeout in X-Kore bugfix (bug #49), sitAuto_idle vs
  shopAuto_open conflict fix (bug #50), other misc bugfixes.
- fov: writeDataFile*() tweaks, lockMap and randomWalk tweaks,
  partySkills for certain jobs
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)
- sparshong: character creation/deletion packet code.
- jsteng, littlewens: mute packet support, chat room list clear bugfix.
- anoxemian: (partial?) kRO/PK server support.
- doenet: improved mon_control.txt, randomWalk and lockMap
  fixes/improvements.
- BotMan: server details for pRO.